--- a/index.html
+++ b/index.html
@@ -9,14 +9,35 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">Portfolio</a>
+        <a href="#" class="logo">Portfolio.</a>
         <nav class="navbar">
-            <a href="#">Home</a>
+            <a href="#" id="action">Home</a>
             <a href="#">About</a>
             <a href="#">Contact</a>
             <a href="#">Skills</a>
         </nav>
     </header>
+
+    <section class="home">
+        <div class="home-content">
+            <h3>Hello It's me</h3>
+            <h1>Austin Luna</h1>
+            <h3>I'm a <span>Developer</span></h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam consectetur maxime</p>
+            <div class="social-media">
+                <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+                <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+                <a href="#"><ion-icon name="logo-linkedin"></ion-icon></a>
+                <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+            </div>
+            <a href="#" class="btn">Download CV</a>            
+        </div>
+        <div class="img-source">
+            <img src="https://source.unsplash.com/d1UPkiFd04A" alt="">
+        </div>
+    </section>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 <script src="script.js"></script>
 </html>
